--- a/app/index.html
+++ b/app/index.html
@@ -243,8 +243,11 @@
       </div>
     </div>
 
-    <div id="testimonials" class="page-section page-section--testimonials">
-      <div class="wrapper">
+    <div
+      id="testimonials"
+      class="page-section page-section--no-b-padding-until-medium page-section--testimonials"
+    >
+      <div class="wrapper wrapper--no-padding-until-medium">
         <h2 class="section-title section-title--blue">
           <img
             class="section-title__icon"
@@ -291,7 +294,7 @@
             </div>
           </div>
           <div class="row__medium-4">
-            <div class="testimonial">
+            <div class="testimonial testimonial--last">
               <div class="testimonial__photo">
                 <img src="assets/images/testimonial-cat.jpg" />
               </div>
