--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,9 @@
         <div class="site-header__logo">
           <img src="assets/images/icons/clear-view-escapes.svg" />
         </div>
-        <div class="site-header__menu-icon"></div>
+        <div class="site-header__menu-icon">
+          <div class="site-header__menu-icon__middle"></div>
+        </div>
         <div class="site-header__menu-content">
           <div class="site-header__btn-container">
             <a href="#" class="btn">Get in Touch</a>
@@ -40,7 +42,7 @@
     </header>
 
     <div class="large-hero">
-      <picture>
+      <picture class="large-hero__image">
         <source
           srcset="
             assets/images/hero--large.jpg        1920w,
@@ -68,7 +70,6 @@
             assets/images/hero--smaller-hi-dpi.jpg 1280w
           "
           alt="Coastal view of ocean and mountains"
-          class="large-hero__image"
         />
       </picture>
 
