--- a/app/index.html
+++ b/app/index.html
@@ -290,6 +290,7 @@
             <div class="testimonial">
               <div class="testimonial__photo">
                 <img
+                  loading="lazy"
                   sizes="160px"
                   srcset="
                     assets/images/testimonial-jane.jpg        160w,
@@ -315,6 +316,7 @@
             <div class="testimonial">
               <div class="testimonial__photo">
                 <img
+                  loading="lazy"
                   sizes="160px"
                   srcset="
                   assets/images/testimonial-john.jpg        160w,
@@ -338,6 +340,7 @@
             <div class="testimonial testimonial--last">
               <div class="testimonial__photo">
                 <img
+                  loading="lazy"
                   sizes="160px"
                   srcset="
                   assets/images/testimonial-cat.jpg        160w,
